tp-kyverno/policies/require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  validationFailureAction: Enforce
  background: false

  rules:
    - name: require-limits
      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Les conteneurs doivent définir resources.limits.cpu et resources.limits.memory."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
